biography alignment fixes

--- a/templates/styles/main.css
+++ b/templates/styles/main.css
@@ -1,3 +1,4 @@
+/* declearing variables to use */
 :root{
    --sub-heading-text:#1E1E1E;
    --article-text:#5E5B5B;
@@ -9,7 +10,6 @@
 
 body{
     background-color:#f1f1f1;
-
  }
 
  .circle{
@@ -57,7 +57,7 @@ textarea{
    margin: 20px 0;
    padding: 20px ;
 }
-.rounded{
+.rounded-class{
    border-radius: 24px;
 }
  .font{
@@ -80,11 +80,8 @@ textarea{
    color:#336799;
    font-size: 14px;
  }
- /* .btn-one{
-   font-weight: 400;
-   padding: .4rem 4rem;
-   font-size: 24px;
-    border: 1px #336799 solid;
-     border-radius: 30px; 
-     color: #336799;
- } */
+ .gallery-images-text{
+   font-family: var(--font-orbitron);
+    color: var(--article-text); 
+ }
+ 
